# RustyBoy

./: .gitignore  Cargo.toml  readme.md
src/: cartridge.rs  cpu.rs  joypad.rs  main.rs  memory.rs  motherboard.rs  registers.rs  rusty_boy.rs  screen.rs  timer.rs
src/rusty_boy/: cartridge.rs  cartridge_header.rs  cpu.rs  joypad.rs  memory.rs  motherboard.rs  screen.rs  sound.rs  timer.rs
src/rusty_boy/cartridge/: mbc.rs  rtc.rs
src/rusty_boy/screen/: s_registers.rs
src/screen/: s_registers.rs
