[package]
name = "RustyBoy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.31.1"
egui_sdl2_gl = {version =  "0.31.0", features = ["sdl2_image", "sdl2_bundled"] }
multi_compare = "0.1.0"
rfd = "0.15.3"
rodio = {version = "0.21.0"}
sdl2 = { version = "0.37.0", features = ["image"], default-features = false }
serde_json = "1.0.140"

[profile.dev]
overflow-checks = false
